[metadata]
name = openstack_user_management
version = 0.1.0
platform = Linux
supported-platform = Linux
summary = OpenStack User Management
description = Manages OpenStack Users
description-file = README.md
keywords = OpenStack
home-page = http://b3lab.org
author = B3Lab
author-email = info@b3lab.org
maintainer = B3Lab
maintainer-email = "B3Lab" <info@b3lab.org>
license = Apache-2
classifier = Development Status :: 3 - Alpha
    Environment :: OpenStack
    Environment :: Console (Text Based)
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: Freeware
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Development Status :: 1 - Planning
    Development Status :: 2 - Pre-Alpha
    Development Status :: 3 - Alpha
    Development Status :: 4 - Beta
    Development Status :: 5 - Production/Stable
    Development Status :: 6 - Mature
    Development Status :: 7 - Inactive

Requires-Dist = requests
Provides-Dist: TBF
Obsoletes-Dist:  TBF
Requires-Python: 2.7
Requires-External: C


[global]
setup-hook =
    pbr.hooks.setup_hook

[files]
packages =
        openstack_user_management

[entry_points]
console_scripts =
    openstack_user_management = openstack_user_management.openstack_user_management:main

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[build_apiguide]
all_files = 1
build-dir = api-guide/build
source-dir = api-guide/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[compile_catalog]

[update_catalog]

[wheel]
universal = 1

[pbr]
# Have pbr generate the module indexes like sphinx autodoc
autodoc_index_modules = True

# Exclude modules that won't build with autodoc (or that we don't want doc'ed);
# this requires updating the exclude_patterns variable in doc/source/conf.py
autodoc_exclude_modules = openstack_user_management.tests.*

# Treat sphinx warnings as errors during the docs build; this helps us keep
# the documentation clean.
warnerrors = true
